--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,7 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background: rgb(238, 234, 234);
 }
 body {
   margin: 0;
@@ -622,7 +623,7 @@ pre tt:after {
 }
 
 header {
-  background: rebeccapurple;
+  background: rgb(199, 185, 185, 0.7);
   margin-bottom: 1.45rem;
   display: flex;
 }
