--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,7 +2,7 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  background: rgb(238, 234, 234);
+  background: rgb(238, 234, 234, 0.4);
 }
 body {
   margin: 0;
