added support button to about page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -712,3 +712,8 @@ header div ul li a {
     -webkit-transform: rotateY(0deg);
   }
 }
+
+.centre {
+  display: flex;
+  justify-content: center;
+}
