--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -733,3 +733,31 @@ header div ul li a {
   display: flex;
   justify-content: center;
 }
+
+.artwork {
+  margin-top: 80px;
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+  margin: 50px 0 50px 0;
+}
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.artwork-details {
+  margin: 40px 0 40px 0;
+}
+
+.paypal {
+  margin: 20px 0 20px 0;
+}
