--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -627,6 +627,7 @@ header {
   background: rgb(199, 185, 185, 0.8);
   margin-bottom: 1.45rem;
   display: flex;
+  border-bottom: 2px solid rgb(175, 135, 195);
 }
 header div {
   max-width: 960;
@@ -764,4 +765,39 @@ header div ul li a {
 
 .exhibition-preview-image {
   max-width: 700px;
+}
+
+.react-share {
+  display: flex;
+  flex-direction: row;
+}
+
+.social-media-network {
+  vertical-align: top;
+  display: inline-block;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.social-media-network__share-count {
+  display: inline-flex;
+  justify-content: center;
+  white-space: nowrap;
+  overflow: visible;
+  width: 0;
+  margin-top: 3px;
+  font-size: 12px;
+}
+
+.network-share-button {
+  cursor: pointer;
+}
+
+.network-share-button:hover:not(:active) {
+  opacity: 0.5;
+}
+
+.social-media-network__custom-icon {
+  width: 32px;
+  height: 32px;
 }
