--- a/src/components/css/layout_bulma.scss
+++ b/src/components/css/layout_bulma.scss
@@ -26,3 +26,20 @@ a.navbar-item:focus-within {
 .support-input {
   max-width: 200px;
 }
+
+.webdev-main {
+  height: 100vh;
+  width: 100vw;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+}
+
+.webdev-main .section {
+  padding: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  // border: 1px solid green;
+  height: 100vh;
+  width: 100%;
+  scroll-snap-align: start;
+}
